--- a/m_designer/package.json
+++ b/m_designer/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "cytoscape": "^3.29.2",
+    "cytoscape-grid-guide": "^2.3.3",
+    "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
