--- a/m_designer/package.json
+++ b/m_designer/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "cytoscape": "^3.29.2",
+    "cytoscape-cxtmenu": "^3.5.0",
     "cytoscape-grid-guide": "^2.3.3",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
