--- a/m_designer/package.json
+++ b/m_designer/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
+    "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,7 +20,6 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
-    "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
