--- a/m_designer/package.json
+++ b/m_designer/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
