--- a/m_designer/package.json
+++ b/m_designer/package.json
@@ -14,6 +14,7 @@
     "cytoscape": "^3.29.2",
     "cytoscape-cxtmenu": "^3.5.0",
     "cytoscape-grid-guide": "^2.3.3",
+    "immer": "^10.1.1",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
